Change overflow of scrollable tables to 'auto', fixes #968

--- a/app/assets/stylesheets/graylog2.less
+++ b/app/assets/stylesheets/graylog2.less
@@ -2141,7 +2141,7 @@ textarea.textarea-xlarge {
 
 .scrollable-table {
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .system-nav-list {
